# DIMOHAMSTER

./: GAME_FLOW_EXPLAINED.md  IMPLEMENTATION_SUMMARY.md  NEW_FEATURES_SUMMARY.md  README.md  settings.gradle.kts  tmpclaude-3b9a-cwd
.claude/: settings.local.json
.github/workflows/: android-build.yml
app/: build.gradle.kts
app/src/androidTest/java/com/example/dimohamster/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/: basic.frag  basic.vert  flat.frag  flat.vert  sprite.frag  sprite.vert
app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
app/src/main/cpp/audio/: AudioSystem.cpp  AudioSystem.h
app/src/main/cpp/engine/: Camera.cpp  Camera.h  Renderer.cpp  Renderer.h  ShaderLoader.cpp  ShaderLoader.h
app/src/main/cpp/fmod/inc/: fmod.hpp  fmod_common.h  fmod_errors.h  fmod_studio.hpp  fmod_studio_common.h
app/src/main/cpp/game/: BreakoutGame.cpp  BreakoutGame.h  PaperTossGame.cpp  PaperTossGame.h
app/src/main/java/com/example/dimohamster/: MainActivity.kt  MainMenuActivity.kt  PlayerNameActivity.kt
app/src/main/java/com/example/dimohamster/audio/: BackgroundMusicManager.kt  SoundEffectManager.kt
app/src/main/java/com/example/dimohamster/camera/: CameraService.kt
app/src/main/java/com/example/dimohamster/core/: GameEventListener.kt  GameView.kt  NativeAudio.kt  NativeRenderer.kt
app/src/main/java/com/example/dimohamster/database/: HighScoreDatabase.kt
app/src/main/java/com/example/dimohamster/papertoss/: CVTarget.kt  PaperTossView.kt  ProbabilityCalculator.kt  Projectile.kt  ProjectilePhysics.kt
app/src/main/java/com/example/dimohamster/sensors/: LocationSvc.kt  SensorBridge.kt
app/src/main/java/com/example/dimohamster/simulation/: DeviceSimulator.kt
app/src/main/java/com/example/dimohamster/ui/: PlayerNameDialog.kt  SettingsOverlay.kt
app/src/main/java/com/example/dimohamster/ui/theme/: Color.kt  Theme.kt  ThemeElements.kt  Type.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/test/java/com/example/dimohamster/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
